<resources>
    <string name="app_name">Routeplanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Vertrekpunt">Vertrekpunt:</string>
    <string name="aankomstpunt">Aankomstpunt</string>
    <string name="zoeken">Zoeken</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="toon_roete">Toon route</string>
    <string name="selecteren">Selecteren</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="postcode_gemeente">Postcode / Gemeente</string>
    <string name="locatie_toevoegen">Locatie toevoegen</string>
    <string name="straat_nummer">Straat + Nummer</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="annuleren">Annuleren</string>
    <string name="nieuwe_locatie">Nieuwe locatie</string>
    <string name="bedoeld_u">Bedoeld u:</string>
    <string name="locatie">Locatie</string>
    <string name="nieuwe_locatie_toevoegen">Nieuwe locatie toevoegen</string>
    <string name="title_activity_roete">Map</string>
    <string name="kaart">Kaart</string>
    <string name="mijn_plaatsen">Mijn plaatsen</string>
    <string name="navigatie">Navigatie</string>
    <string name="opties">Opties</string>
    <string name="instellingen">Instellingen</string>
    <string name="klik_op_vernieuw_knop_om_gegevens_te_laden">Klik vernieuw knop voor gegevens te laden.</string>
    <string name="Routeplanner">Routeplanner</string>
    <string name="mijn_naam">Hein Pauwelyn 2NMCT7</string>
</resources>
