<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmartNieuwLocatieFragement">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nieuwe_locatie"
        android:id="@+id/txvNieuweLocatieText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/locatie"
        android:id="@+id/txvNaam"
        android:layout_below="@+id/txvNieuweLocatieText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtLocatie"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txvNaam"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bedoeld_u"
        android:id="@+id/textView2"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/edtLocatie"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lorem_ipsum"
        android:id="@+id/txvBedoeling"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnRefresh"
        android:layout_alignBottom="@+id/btnRefresh"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toevoegen"
        android:id="@+id/btnToevoegen"
        android:layout_below="@+id/txvBedoeling"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuleren"
        android:id="@+id/btnAnnuleren"
        android:layout_below="@+id/btnToevoegen"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRefresh"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_refresh" />

</RelativeLayout>
