<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.howest.nmct.roeteplanner.NieuweLocatieFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/locatie_toevoegen"
        android:id="@+id/txvHeaderText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/postcode_gemeente"
        android:id="@+id/txvGemeente"
        android:layout_below="@+id/txvHeaderText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtGemeente"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txvGemeente"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/straat_nummer"
        android:id="@+id/txvStraat"
        android:layout_below="@+id/edtGemeente"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtStraat"
        android:layout_below="@+id/txvStraat"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toevoegen"
        android:id="@+id/btnToevoegen"
        android:layout_below="@+id/edtStraat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuleren"
        android:id="@+id/btnAnnuleren"
        android:layout_below="@+id/btnToevoegen"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
